{
    "version": 1,
    "name": "Input Actions",
    "maps": [
        {
            "name": "Player",
            "id": "1d065490-3571-4f41-9eda-3240dd71eb05",
            "actions": [
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "24402a5e-34ca-450e-a798-0fafdd5f0f16",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "f0e5e632-4df3-46f9-9d95-e54937cf2b7d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchPlaceMode",
                    "type": "Button",
                    "id": "fb5ab1f3-c600-47a2-a9c1-9ba289b32087",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchPauseMode",
                    "type": "Button",
                    "id": "9238c1af-e98f-43cd-8e0f-691e001cbce2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a2388d8-6513-48ee-90e7-3f4de2959a1e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22c7be68-dc90-4c56-9960-1b7189b58fee",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69872ea0-87b3-4a53-8931-0a0c232f9cad",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchPlaceMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7167b9b2-813d-4b3f-9a23-4a0c59eab9da",
                    "path": "<Keyboard>/pause",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchPauseMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "6b350ba7-c893-43d1-9d00-af4f08d6ba51",
            "actions": [
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "ea561a71-1e9c-44c5-8547-10ca7bcc6989",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ab3c5c4-dd40-4b4f-b716-aa7b9964c832",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}